corrections (paper, language, equations)

--- a/paper/DAFx20_Templates_LaTeX/img/brink.tex
+++ b/paper/DAFx20_Templates_LaTeX/img/brink.tex
@@ -7,7 +7,7 @@ legend style={fill opacity=0.8, draw opacity=1, text opacity=1, draw=white!80.00
 tick align=outside,
 tick pos=left,
 x grid style={white!69.01961!black},
-xlabel={time [seconds]},
+xlabel={Time [seconds]},
 xmajorgrids,
 xmin=-0.00567, xmax=0.11902,
 xtick style={color=black},
