--- a/paper/DAFx20_Templates_LaTeX/dafx_20.sty
+++ b/paper/DAFx20_Templates_LaTeX/dafx_20.sty
@@ -185,7 +185,7 @@
 \ifnum\value{numauth}=1 
    {\scriptsize{\it Copyright:~\copyright \hspace*{1 pt} 2020 \paperauthorA . This is an open-access article distributed under the terms of the \href{http://creativecommons.org/licenses/by/3.0/}{Creative Commons Attribution 3.0 Unported License}, which permits unrestricted use, distribution, and reproduction in any medium, provided the original author and source are credited.}}
 \else
-  {\scriptsize{\it Copyright:~\copyright \hspace*{1 pt} 2020 \paperauthorA  \hspace*{1 pt} et al. This is an open-access article distributed under the terms of the \href{http://creativecommons.org/licenses/by/3.0/}{Creative Commons Attribution 3.0 Unported License}, which permits unrestricted use, distribution, and reproduction in any medium, provided the original author and source are credited.}}
+  {\scriptsize{\it Copyright:~\copyright \hspace*{1 pt} 2020 \paperauthorA  \hspace*{1 pt}. This is an open-access article distributed under the terms of the \href{http://creativecommons.org/licenses/by/3.0/}{Creative Commons Attribution 3.0 Unported License}, which permits unrestricted use, distribution, and reproduction in any medium, provided the original author and source are credited.}}
 \fi
 
 %{\copyright~Copyright notice here}
