--- a/paper/DAFx20_Templates_LaTeX/img/julia.tex
+++ b/paper/DAFx20_Templates_LaTeX/img/julia.tex
@@ -6,7 +6,7 @@ tick align=outside,
 tick pos=left,
 width=1.5\textwidth,
 x grid style={white!69.01961!black},
-xlabel={time [seconds]},
+xlabel={Time [seconds]},
 xmajorgrids,
 xmin=-0.00113, xmax=0.02379,
 xtick style={color=black},
